syntax = "proto3";

package api;

option go_package = "pkg/api";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse) {}
  rpc RefreshTokens(RefreshTokensRequest) returns (RefreshTokensResponse) {}
}

message RefreshTokensRequest {
  string refresh_token = 1;
}
message RefreshTokensResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  int64 user_id = 1;
}

message IsAdminRequest {
  int64 user_id = 1;
}

message IsAdminResponse {
  bool is_admin = 1;
}